# xkcd

./: .env.example  .flake8  .gitignore  .isort.cfg  .mypy.ini  LICENSE  README.md  download.py  main.py  pyproject.toml  settings.py  utils.py  vk_operations.py  xkcd_operations.py
