[tool.poetry]
name = "xkcd"
version = "0.1.0"
description = ""
authors = ["Danil Nikitin <d.nikitin.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
requests = "^2.28.1"
pathvalidate = "^2.5.2"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
flake8 = "^5.0.4"
mypy = "^0.971"
types-requests = "^2.28.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
